using CustomPcStoreApp.Services.Interfaces;

namespace CustomPcStoreApp.Services;

public class AssemblyService : IAssemblyService
{
    // Временная заглушка - будет реализовано в задаче 10
}