namespace CustomPcStoreApp.Services.Interfaces;

public interface IOrderService
{
    // Будет реализован в следующих задачах
}