using CustomPcStoreApp.Services.Interfaces;

namespace CustomPcStoreApp.Services;

public class OrderService : IOrderService
{
    // Временная заглушка - будет реализовано в задаче 9
}